# ASI_Projekt_s27492_s26681_27100

./: .dockerignore  .gitignore  README.md  environment.yml  pyproject.toml
.dvc/: config
conf/base/: catalog.yml  parameters.yml
data/01_raw/: winequality-red.csv.dvc
data/06_models/: .gitkeep
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: PLAN_IMPLEMENTACJI.md  opis_problemu_i_danych.md  prezentacja.md
feature_repo/: .gitignore  definitions.py  feature_store.yaml  generate_features.py
notebooks/: 01_baseline_eda.ipynb
scripts/: run_experiments.py
serving/: app.py  bootstrap_data.py  bootstrap_model.py  model_loader.py  requirements.txt
serving/logs/: .gitignore
serving/monitoring/: .gitignore  __init__.py  drift.py  logger.py
serving/static/: style.css
serving/templates/: index.html
src/winequality/: pipeline_registry.py  settings.py
src/winequality/pipelines/: __init__.py
src/winequality/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/winequality/pipelines/data_science/: nodes.py  pipeline.py
src/winequality/pipelines/evaluation/: nodes.py  pipeline.py
tests/: conftest.py  test_data.py  test_monitoring.py  test_preprocessing.py  test_serving.py
